--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,4 +2,6 @@
 
 <div data-react-component data-react-component-name="IndexSecondComponent" data-react-component-props="<%= {message: "Hello from second component!"}.to_json %>"></div>
 
+<%= content_tag(:div, nil, data: {react_component: true, react_component_name: "IndexSecondComponent", react_component_props: {message: "Hello from second component for third time!"}.to_json}) %>
+
 <%= link_to('Show page', page_show_path) %>
